--- a/src/IngressController/NetCorePal.IngressController.csproj
+++ b/src/IngressController/NetCorePal.IngressController.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
-    <PackageReference Include="Yarp.Kubernetes.Controller" Version="2.0.0-preview.1.22306.3" />
+    <PackageReference Include="Yarp.Kubernetes.Controller" Version="2.0.0-preview.*" />
   </ItemGroup>
 
 </Project>
