--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,6 +32,15 @@ jobs:
       uses: docker/metadata-action@v4.0.1
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+    - name: Docker Metadata action
+      # You may pin to the exact commit or the version.
+      # uses: docker/metadata-action@69f6fc9d46f2f8bf0d5491e4aabe0bb8c6a4678a
+      uses: docker/metadata-action@v4.0.1
+      with:
+        # List of tags as key-value pair attributes
+        tags: |
+          type=schedule,pattern={{date 'YYYYMMDDHHmmss'}}
+          
     - name: Build and push Docker images
       # You may pin to the exact commit or the version.
       # uses: docker/build-push-action@e551b19e49efd4e98792db7592c17c09b89db8d8
