--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,6 +37,8 @@ jobs:
       # uses: docker/metadata-action@69f6fc9d46f2f8bf0d5491e4aabe0bb8c6a4678a
       uses: docker/metadata-action@v4.0.1
       with:
+        images: |
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         # List of tags as key-value pair attributes
         tags: |
           type=schedule,pattern={{date 'YYYYMMDDHHmmss'}}
