--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,8 +37,9 @@ jobs:
         # List of tags as key-value pair attributes
         tags: |
           type=ref,event=branch
+          type=ref,event=tag
           type=schedule,pattern={{date 'YYYYMMDDHHmmss'}}
-
+          type=ref,event=pr
     - name: Build and push Docker images
       # You may pin to the exact commit or the version.
       # uses: docker/build-push-action@e551b19e49efd4e98792db7592c17c09b89db8d8
