--- a/src/IngressController/NetCorePal.IngressController.csproj
+++ b/src/IngressController/NetCorePal.IngressController.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
+    <PackageReference Include="NetCorePal.ServiceDiscovery.Yarp" Version="0.1.0-preview.*" />
     <PackageReference Include="Yarp.Kubernetes.Controller" Version="2.0.0-preview.*" />
   </ItemGroup>
 
