--- a/NuGet.config
+++ b/NuGet.config
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+    <!--To inherit the global NuGet package sources remove the <clear/> line below -->
     <clear />
-    <add key=".NET Libraries Daily" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries/nuget/v3/index.json" />
-	<add key="NetCorePal-MyGet" value="https://www.myget.org/F/netcorepal/api/v3/index.json" />
-	<add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="azure" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries/nuget/v3/index.json" />
+    <add key="nuget" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
-  <disabledPackageSources>
-    <clear />
-  </disabledPackageSources>
 </configuration>
