--- a/src/NetCorePal.IngressController/Dockerfile
+++ b/src/NetCorePal.IngressController/Dockerfile
@@ -7,7 +7,7 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["nuget.config", "."]
+COPY ["NuGet.config", "."]
 COPY ["src/NetCorePal.IngressController/NetCorePal.IngressController.csproj", "src/NetCorePal.IngressController/"]
 RUN dotnet restore "src/NetCorePal.IngressController/NetCorePal.IngressController.csproj"
 COPY . .
