add netcorepal config

--- a/helm-chart/templates/configmap.yaml
+++ b/helm-chart/templates/configmap.yaml
@@ -13,5 +13,10 @@ data:
         "DefaultSslCertificate": "{{ .Values.yarp.defaultSslCertificateSecretName | default .Release.Namespace }}/{{ .Values.yarp.defaultSslCertificateSecretName}}",
         "ControllerServiceNamespace": "{{ .Release.Namespace }}",
         "ControllerServiceName": "{{ include "netcorepal-ingress-controller.fullname" . }}"
+      },
+      "NetCorePal": {
+        "UseMetricServer": {{ Values.netcorepal.useMetricServer | default false }},
+        "UseHttpMetrics": {{ Values.netcorepal.useHttpMetrics | default false }},
+        "UseYarpProxyStateUI": {{ Values.netcorepal.useYarpProxyStateUI | default false }}
       }
     }
