--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -23,6 +23,11 @@ yarp:
   defaultSslCertificateSecretNamespace: ""
   defaultSslCertificateSecretName: ""
 
+netcorepal:
+  useMetricServer: false
+  useHttpMetrics: false
+  useYarpProxyStateUI: true
+  
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
