--- a/src/NetCorePal.IngressController/appsettings.Development.json
+++ b/src/NetCorePal.IngressController/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "NetCorePal": {
+    "UseMetricServer": true,
+    "UseHttpMetrics": true,
+    "UseYarpProxyStateUI": true
   }
 }
