--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,11 @@ jobs:
     steps:
     - name: Setup Docker buildx
       uses: docker/setup-buildx-action@v2.2.1
-
+    - name: Docker Setup QEMU
+      # You may pin to the exact commit or the version.
+      # uses: docker/setup-qemu-action@e81a89b1732b9c48d79cd809d8d81d79c4647a18
+      uses: docker/setup-qemu-action@v2.1.0
+      
     - uses: actions/checkout@v3
     - name: Docker Login
       # You may pin to the exact commit or the version.
