--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,4 +58,4 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         file: src/NetCorePal.IngressController/Dockerfile
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
